terraform/ansible.tf
data "template_file" "ansible" {
  template = "${file("${path.module}/templates/ansible.sh.tpl")}"

  vars {
    prometheus_priv_ip = "${aws_instance.prometheus.private_ip}"
  }
}

resource "aws_instance" "ansible" {
  associate_public_ip_address = true
  ami = "${var.ami}"
  instance_type = "t2.micro"
  subnet_id = "${aws_subnet.public_subnet1.id}"
  vpc_security_group_ids = ["${aws_security_group.sg_default.id}", "${aws_security_group.sg_consul.id}"]
  key_name = "${var.key_name}"
  iam_instance_profile   = "${aws_iam_instance_profile.consul_auto_join.name}"
  tags {
    Name = "ansible"
  }

  connection {
    user = "${var.instance_username}"
    private_key = "${file(var.private_key_path)}"
  }

  provisioner "file" {
    source = "/home/osboxes/.ssh/aws_ec2.pem"
    destination = "/home/ubuntu/.ssh/aws_ec2.pem"
  }

  user_data = "${data.template_file.ansible.rendered}"
  depends_on = ["aws_instance.prometheus"]
}
